--- a/.github/workflows/validations.yml
+++ b/.github/workflows/validations.yml
@@ -23,5 +23,8 @@ jobs:
           make create_env
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
-        run: |
-          pytest -vvx tests/ 
+        env:
+          PYTHONPATH: ./src
+        run: 
+          . venv/bin/activate
+          pytest -vvx tests/
