--- a/.github/workflows/validations.yml
+++ b/.github/workflows/validations.yml
@@ -20,8 +20,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          make create_env
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          python -m venv venv
+          . venv/bin/activate
+          pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -e .
+      - name: Get Books
+        run: bash get_the_books.sh
       - name: Test with pytest
         env:
           PYTHONPATH: ./src
